kanc/src/tests/sample_code/should_fail/single_file/parse/component_kw_in_dot_rhs/mod_dot_mod.k
let x = mod.mod.Nat.o;
